# phosphoproteomics-data-analysis

./: .gitignore  12933_2024_2338_MOESM1_ESM.xlsx  12933_2024_2338_MOESM2_ESM.xlsx  Normalised_phosphopeptide_quantities_Bulk.txt  README.md  phosphoproteomics_analysis.ipynb  phosphoproteomics_analysis_figures.ipynb  pyproject.toml
