[project]
name = "phosphoproteomics-data-analysis"
version = "0.1.0"
description = "Phosphoproteomics data analysis replication - insulin signaling in cardiac tissue"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "openpyxl>=3.1",
    "jupyter>=1.0",
    "adjustText>=1.0",
]
